<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.main.MainActivity">

    <FrameLayout
        android:id="@+id/mainMenu_contentFl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/silver"/>

    <RadioGroup
        android:id="@+id/mainMenu_tabRgp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/mainMenu_mainRBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/tab_main_select"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="@dimen/tab_text_size"
            android:text="@string/menu_main" />

        <RadioButton
            android:id="@+id/mainMenu_investmentRBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/tab_investment_select"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="@dimen/tab_text_size"
            android:text="@string/menu_investment" />

        <RadioButton
            android:id="@+id/mainMenu_myRBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/tab_my_select"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="@dimen/tab_text_size"
            android:text="@string/menu_my" />

        <RadioButton
            android:id="@+id/mainMenu_settingRBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/tab_setting_select"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="@dimen/tab_text_size"
            android:text="@string/menu_setting" />
    </RadioGroup>
</LinearLayout>
